--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hellow rodl
+https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css" rel="stylesheet">
+
+<section class="section">
+    <div class="container">
+        
+    </div>
+</section>
