--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css
-
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css" rel="stylesheet">
 
 <section class="section">
     <div class="container">
-        
+        <figure class="image>
+            <img src="https://mraltman.github.io/omera/images/Omera_Logo5.png">
+        </figure>
     </div>
 </section>
