--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <section class="section">
     <div class="container">
-        <figure class="image>
+        <figure class="image">
             <img src="https://mraltman.github.io/omera/images/Omera_Logo5.png">
         </figure>
     </div>
