--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css" rel="stylesheet">
-
-<section class="section">
-    <div class="container">
-        <figure class="image">
-            <img src="https://mraltman.github.io/omera/images/omera-logo.png">
-        </figure>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hk-grotesk" type="text/css"/>
+<body>
+    <div class="columns">
+        <div class="column is-half is-offset-one-quarter">
+            <figure class="image">
+                <img src="images/omera-logo.png">
+            </figure>
+        </div>
     </div>
-</section>
+    <div class="columns">
+        <div class="column">
+            <div class="content has-text-centered" style="font-family: 'HKGroteskRegular'; font-weight: normal;">
+                <h1>Coming soon.</h1>
+            </div>
+        </div>
+    </div>
+</body>
