--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div class="columns">
         <div class="column is-half is-offset-one-quarter">
             <figure class="image">
-                <img src="images/omera-logo.png">
+                <img src="img/omera-logo.png">
             </figure>
         </div>
     </div>
@@ -16,3 +16,14 @@
         </div>
     </div>
 </body>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-99852285-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
