--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css" rel="stylesheet">
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hk-grotesk" type="text/css"/>
+<link href="css/custom.css" rel="stylesheet">
 <body>
     <div class="columns">
         <div class="column is-half is-offset-one-quarter">
