--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css" rel="stylesheet">
 <link href="css/custom.css" rel="stylesheet">
 <body>
-    <div class="columns">
-        <div class="column is-half is-offset-one-quarter">
-            <figure class="image">
-                <img src="img/omera-logo.png">
-            </figure>
+    <section class="hero">
+        <div class="hero-body">
+            <div class="columns">
+                <div class="column is-half is-offset-one-quarter">
+                    <figure class="image">
+                        <img src="img/omera-logo.png">
+                    </figure>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
     <div class="columns">
         <div class="column">
             <div class="content has-text-centered" style="font-family: 'HKGroteskRegular'; font-weight: normal;">
